fix sprite flicker issue on movement, preload image assets

--- a/css/style.css
+++ b/css/style.css
@@ -66,7 +66,7 @@ body {
 
 #hero {
     position: absolute;
-    transition:left .1s linear;
+    transition:left .1s linear, top .1s linear;
     top: 250px;
     left: 100px;
     width: 50px;
@@ -74,6 +74,15 @@ body {
     background-position: -8px 8px;
     z-index: 1;
     background-size: cover;
+    
+}
+
+#hero img {
+    max-height: 100%;
+    position: absolute;
+    left: -9px;
+    top: 9px;
+    
 }
 
 #game-world {
